--- a/will-it-miss/src/package.json
+++ b/will-it-miss/src/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.1.1"
   },
   "dependencies": {
+    "react": "^18.2.0",
     "react-async-hook": "^4.0.0",
     "react-dom": "^18.2.0"
   }
